--- a/index.html
+++ b/index.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Newsletter Community</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Newsletter Community</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>📬 Newsletter Community</h1>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="community.html">Community</a>
-    <a href="about.html">About</a>
+    <h1>📰 Newsletter Community</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="community.html">Community</a></li>
+    </ul>
   </nav>
 </header>
 
-<div class="container">
-  <h2>Welcome to our Newsletter!</h2>
-  <p>
-    Stay updated with the latest stories, creative ideas, and community updates. 
-    Share your thoughts anonymously and enjoy reading posts from fellow subscribers.
-  </p>
-  <div class="cta-buttons">
-    <a href="community.html"><button>Explore Community</button></a>
-    <a href="about.html"><button>Learn About Us</button></a>
+<section class="hero">
+  <h2>Stay Updated & Share Stories</h2>
+  <p>Our newsletter keeps you informed with the latest updates, trends, and community stories. Share your experiences anonymously or publicly with our friendly community.</p>
+  <a href="community.html" class="btn">Go to Community Stories</a>
+</section>
+
+<section class="advantages">
+  <h2>Why Join Our Newsletter?</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>📬 Instant Updates</h3>
+      <p>Receive latest news, stories, and updates directly in your inbox. Stay ahead without searching multiple sources.</p>
+    </div>
+    <div class="card">
+      <h3>✍️ Share Anonymously</h3>
+      <p>Post your stories, tips, and experiences without revealing your identity. Everyone’s voice matters!</p>
+    </div>
+    <div class="card">
+      <h3>🌐 Community Driven</h3>
+      <p>Connect with like-minded readers and contributors. Read, comment, and enjoy a safe, vibrant community.</p>
+    </div>
+    <div class="card">
+      <h3>💡 Creative Inspiration</h3>
+      <p>Discover ideas, projects, and insights shared by others. Grow your knowledge and creativity every day.</p>
+    </div>
   </div>
-</div>
+</section>
 
 <footer>
-  © 2025 Newsletter Community. All Rights Reserved.
+  <p>© 2025 Newsletter Community. All Rights Reserved.</p>
 </footer>
 
 </body>
