--- a/about.html
+++ b/about.html
@@ -1,68 +1,42 @@
-<!doctype html>
-<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
-<title>Share Story</title></head><body style="font-family:Arial;padding:20px">
-<div style="max-width:720px;margin:0 auto;background:#fff;padding:18px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,0.08)">
-  <h2>Share Your Story</h2>
-  <form id="storyForm">
-    <input name="title" placeholder="Title" required style="width:100%;padding:10px;margin-top:8px">
-    <textarea name="content" placeholder="Write your story..." required style="width:100%;height:160px;margin-top:8px;padding:10px"></textarea>
-    <input name="hp" style="display:none">
-    <button type="submit" style="margin-top:8px;padding:10px 16px;background:#5c2e91;color:#fff;border:none;border-radius:8px">Submit</button>
-  </form>
-  <div style="margin-top:12px;color:#666">Posts are reviewed by admin before appearing.</div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About – Newsletter Community</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const userEmail = localStorage.getItem("userEmail");
+<header>
+  <nav>
+    <h1>📰 Newsletter Community</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="community.html">Community</a></li>
+    </ul>
+  </nav>
+</header>
 
-  if (!userEmail) {
-    alert("Please login first");
-    window.location.href = "login.html";
-    return;
-  }
+<section class="about-hero">
+  <h2>About Our Newsletter</h2>
+  <p>We started this platform to make staying informed and sharing stories easy, fun, and community-driven. No login barriers, no admin restrictions—just a free space for creativity and learning.</p>
+</section>
 
-  // ✅ show email confirmation
-  document.getElementById("welcomeText").textContent = `Welcome, ${userEmail}!`;
+<section class="team">
+  <h2>Our Mission</h2>
+  <ul>
+    <li>Provide up-to-date news and updates in one place.</li>
+    <li>Encourage everyone to share their stories anonymously.</li>
+    <li>Create a supportive and vibrant online community.</li>
+    <li>Inspire creativity and new ideas through shared experiences.</li>
+  </ul>
+</section>
 
-  // ✅ handle story posting
-  const postBtn = document.getElementById("postBtn");
-  postBtn.addEventListener("click", async () => {
-    const story = document.getElementById("storyInput").value.trim();
-    if (!story) {
-      alert("Please write something before posting!");
-      return;
-    }
+<footer>
+  <p>© 2025 Newsletter Community. All Rights Reserved.</p>
+</footer>
 
-    const formData = new URLSearchParams();
-    formData.append("action", "addStory");
-    formData.append("email", userEmail);
-    formData.append("story", story);
-    formData.append("key", "v8YhT93NfZ2jP6mXcA7rL1kE5s");
-    formData.append("origin", window.location.origin);
-
-    try {
-      const response = await fetch("https://script.google.com/macros/s/AKfycbyVkfjiTn8IeYxNYw0gcHjZfe_mEfr-Sic-Km3S8RR1D3G2ILeC-2Dnrw_kngJ40tJm/exec", {
-        method: "POST",
-        body: formData
-      });
-
-      const text = await response.text();
-      console.log("Server response:", text);
-
-      if (text.includes("Success: Story Added")) {
-        alert("✅ Story posted successfully!");
-        document.getElementById("storyInput").value = "";
-      } else {
-        alert("❌ Failed to post. Please try again.");
-      }
-    } catch (err) {
-      console.error(err);
-      alert("⚠️ Network error. Please try again later.");
-    }
-  });
-});
-</script>
-
-</script>
-</body></html>
+</body>
+</html>
