fix gmail spelling error

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
   <div class="card">
     <h2>Samad Ur Rehman</h2>
     <p><strong>Birthdate:</strong> 10 Feb 2006</p>
-    <p><strong>Email:</strong> samadrehman@example.com</p>
+    <p><strong>Email:</strong> samadrehman550@gmail.com</p>
     <p><strong>City:</strong> Bhopal </p>
     <p><strong>College:</strong> Government Hamidia arts and commerce college </p>
   </div>
